Create configurable property